--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12"
+    "react-native-video": "^5.1.0-alpha8",
+    "react-native-web": "~0.13.12",
+    "expo-av": "~8.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
