--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.12.6",
     "axios": "^0.21.1",
     "expo": "~39.0.2",
+    "expo-av": "~8.6.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -21,9 +22,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "~0.13.12",
-    "expo-av": "~8.6.0"
+    "search-params": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
