--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-image-picker": "^3.1.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
-    "search-params": "^3.0.0"
+    "search-params": "^3.0.0",
+    "expo-image-picker": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
