--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "axios": "^0.21.1",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
+    "expo-image-picker": "~9.1.1",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -23,8 +25,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
-    "search-params": "^3.0.0",
-    "expo-image-picker": "~9.1.1"
+    "search-params": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
