--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.13.12",
     "search-params": "^3.0.0"
   },
