--- a/package.json
+++ b/package.json
@@ -8,27 +8,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@kangyoosam/react-native-readmore": "^1.0.2",
-    "@react-native-async-storage/async-storage": "^1.14.1",
+    "@expo/webpack-config": "^0.17.2",
+    "@kangyoosam/react-native-readmore": "*",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.8.9",
-    "@react-navigation/stack": "^5.12.6",
+    "@react-navigation/native": "6.1.1",
+    "@react-navigation/stack": "6.3.10",
     "axios": "^0.21.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
-    "expo": "~39.0.2",
-    "expo-av": "~8.6.0",
-    "expo-image-picker": "~9.1.1",
-    "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "dotenv": "^16.0.3",
+    "expo": "~47.0.0",
+    "expo-av": "~13.0.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-linking": "~3.2.3",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^4.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.18.9",
     "search-params": "^3.0.0"
   },
   "devDependencies": {
