Strapi 4 api component

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-APP_SERVER_URL=http://IP_ADDRESS:3000
-STRAPI_URL=http://IP_ADDRESS:1337
+# Note: You must use the full IPv4 address rather than "localhost"
+APP_SERVER_URL="https://IPV4_ADDRESS:443"
+STRAPI_URL="http://IPV4_ADDRESS:1337/api"
