--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+APP_SERVER_URL="https://localhost:443"
+
 # Note: You must use the full IPv4 address rather than "localhost"
-APP_SERVER_URL="https://IPV4_ADDRESS:443"
 STRAPI_URL="http://IPV4_ADDRESS:1337/api"
