--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "6.1.1",
     "@react-navigation/stack": "6.3.10",
+    "@stripe/stripe-js": "^1.46.0",
     "axios": "^0.21.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "dotenv": "^16.0.3",
@@ -22,6 +23,7 @@
     "expo-image-picker": "~14.0.2",
     "expo-linking": "~3.2.3",
     "expo-status-bar": "~1.4.2",
+    "language-list": "0.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
