Lessons views copy over, other improvements

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ APP_SERVER_URL="https://localhost:443"
 
 # Note: You must use the full IPv4 address rather than "localhost"
 STRAPI_URL="http://IPV4_ADDRESS:1337/api"
+STRAPI_PUBLIC_URL="http://IPV4_ADDRESS:1337"
