--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@expo/webpack-config": "^0.17.2",
     "@kangyoosam/react-native-readmore": "*",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.1.1",
     "@react-navigation/stack": "6.3.10",
     "@stripe/stripe-js": "^1.46.0",
@@ -19,14 +19,14 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "dotenv": "^16.0.3",
     "expo": "~47.0.0",
-    "expo-av": "~13.0.2",
+    "expo-av": "~13.0.3",
     "expo-image-picker": "~14.0.2",
-    "expo-linking": "~3.3.0",
+    "expo-linking": "~3.3.1",
     "expo-status-bar": "~1.4.2",
     "language-list": "0.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.1.0",
     "react-native-reanimated": "~2.12.0",
@@ -34,7 +34,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.9",
-    "search-params": "^3.0.0"
+    "search-params": "^3.0.0",
+    "@babel/core": "^7.19.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
